# turtlebot_assignment

./: .gitignore  .gitmodules  README.md
turtle_app/: CMakeLists.txt  package.xml
turtle_app/include/: CameraCapture.h  Idle.h  Initialize.h  Navigate.h  Terminate.h  Types.h  world_model.h
turtle_app/include/fsm/: FiniteStateMachine.h  State.h
turtle_app/include/states/: CameraCapture.h  Idle.h  Initialize.h  Navigate.h  Terminate.h
turtle_app/launch/: app.launch
turtle_app/src/: CameraCapture.cpp  Idle.cpp  Initialize.cpp  Navigate.cpp  Terminate.cpp  camera_server.cpp  turtle_node.cpp  world_model.cpp
turtle_app/src/fsm/: FiniteStateMachine.cpp
turtle_app/src/states/: CameraCapture.cpp  Idle.cpp  Initialize.cpp  Navigate.cpp  Terminate.cpp
turtle_app/srv/: CameraCapture.srv
turtle_bringup/: CMakeLists.txt  package.xml
turtle_bringup/config/: config.yaml
turtle_bringup/launch/: sim.launch
turtle_bringup/launch/modules/: navigation.launch
turtle_bringup/maps/: home.pgm
turtle_bringup/rviz/: default.rviz
turtle_bringup/scripts/: goal_viz.py
turtle_description/: CMakeLists.txt  package.xml
turtle_description/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
turtle_sim/: CMakeLists.txt  package.xml
turtle_sim/launch/: world.launch
turtle_sim/models/home/: model.sdf
turtle_sim/models/unit_box/: model.sdf
turtle_sim/worlds/: home.world
