<?xml version="1.0"?>
<package format="2">
  <name>turtle_app</name>
  <version>0.0.0</version>
  <description>The turtle_app package</description>

  <maintainer email="athish.t@gmail.com">Athish T</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>

  <export>
  </export>
</package>
