<?xml version="1.0"?>
<package format="2">
  <name>turtle_bringup</name>
  <version>0.0.0</version>
  <description>The turtle_bringup package</description>

  <maintainer email="athish.t@gmail.com">Athish T</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>turtle_sim</depend>
  <depend>turtle3_navigation</depend>
  <depend>dwa_local_planner</depend>
  <export>

  </export>
</package>
