<?xml version="1.0"?>
<package format="2">
  <name>turtle_description</name>
  <version>0.0.0</version>
  <description>The turtle_description package</description>

  <maintainer email="athish.t@gmail.com">athish</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>turtlebot3_description</depend>

  <export>
  </export>
</package>
